--- a/blog/templates/blog/includes/post.html
+++ b/blog/templates/blog/includes/post.html
@@ -3,7 +3,7 @@
 <li>
   <article class="post">
     <a href="{% url "post-detail-page" post.slug %}">
-      <img src="{% static "blog/images/"|add:post.image %}" alt="{{ post.title }}"
+      <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}"
       />
       <div class="post__content">
         <h3>{{ post.title }}</h3>
@@ -13,4 +13,4 @@
       </div>
     </a>
   </article>
-</li>   
+</li>
