--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,9 @@
 </head>
 <body>
   <header id="main-navigation">
-    <h1><a href="{% url "starting-page" %}">Maheep' Blog</a></h1>
+    <h1><a href="{% url "starting-page" %}">Maheep's Blog</a></h1>
     <nav>
-      <a href="{% url "posts-page" %}">All Posts</a>
+      <a href="{% url "post-page" %}">All Posts</a>
     </nav>
   </header>
 
