--- a/blog/templates/blog/post-detail.html
+++ b/blog/templates/blog/post-detail.html
@@ -20,7 +20,7 @@
 
 
   <article>
-    <img src="{% static "blog/images/"|add:post.image_name %}" alt="{{ post.title }}" />
+    <img src="{{post.image.url}}" alt="{{ post.title }}" />
     <address>By <a href="mailto:test@test.com">{{ post.author }}</a></address>
     <div>Last updated on <time>{{ post.date|date:"d M Y" }}</time></div>
   </article>
@@ -29,4 +29,27 @@
 <main>
   {{ post.content|linebreaks }}
 </main>
+
+<section id="comment-form">
+  <h2>Your Comment</h2>
+  <form>
+    {% for form_field in comment_form %}
+    <div class="form-control">
+      {{ form_field.label_tag}}
+      {{ form_field}}
+      {{form_field.errors}}
+
+
+
+    </div>
+    {% endfor %}
+    <button>
+      Save Comment
+    </button>
+  </form>
+</section>
+
+
+
+
 {% endblock %}
